test/TestPhases/typechecker/invalid/returnCannotBeVoid2Function.blc
function rrr(a: bool) returns int8
    
    if a then
        return 8
    else // wait once more
    
        return 7
    end
    
    return // <-???
end

@[EntryPoint]
activity start ()()
    _ = rrr(true)
    await true
end